Ajustando forma como os preços dos trabalhos são calculados